[package]
name = "corsp"
version = "0.1.0"
edition = "2021"
description = "A simple CORS proxy tool"
repository = "https://github.com/wyhaya/corsp"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = ["cors"] }
hyper = { version = "0.14.20", features = ["http1", "http2", "client", "server", "tcp"] }
hyper-rustls = { version = "0.23.0", features = ["http1", "http2", "native-tokio", "tls12"] }
logs = { version = "0.6.2" }
once_cell = { version = "1.14.0" }
clap = { version = "3.2.20", features = ["derive"] }